--- a/pages/_app.css
+++ b/pages/_app.css
@@ -64,6 +64,8 @@
  * =====================
  */
 :root {
+  --color-white: #fff;
+
   --color-gray-0: #f8f9fa;
   --color-gray-1: #f1f3f5;
   --color-gray-2: #e9ecef;
@@ -83,12 +85,10 @@
  *     HEADING STYLE
  * =====================
  */
-.h0, .h1, .h2, .h3,
 h1, h2, h3 {
   letter-spacing: calc(-0.4rem / 16);
 }
 
-.h4, .h5, .h6,
 h4, h5, h6, p {
   letter-spacing: calc(-0.2rem / 16);
 }
@@ -98,37 +98,31 @@ h4, h5, h6, p {
   line-height: calc(64rem / 16);
 }
 
-.h1,
 h1 {
   font-size: calc(38rem / 16);
   line-height: calc(49rem / 16);
 }
 
-.h2,
 h2 {
   font-size: calc(28rem / 16);
   line-height: calc(36rem / 16);
 }
 
-.h3,
 h3 {
   font-size: calc(22rem / 16);
   line-height: calc(33rem / 16);
 }
 
-.h4,
 h4 {
   font-size: calc(22rem / 16);
   line-height: calc(33rem / 16);
 }
 
-.h5,
 h5 {
   font-size: calc(16rem /16);
   line-height: calc(24rem / 16);
 }
 
-.h6,
 h6 {
   font-size: calc(14rem / 16);
   line-height: calc(21rem / 16);
@@ -140,67 +134,19 @@ p {
 }
 
 @media screen and (max-width: 768px) {
-  .h1,
   h1 {
     font-size: calc(32rem / 16);
     line-height: calc(38rem / 16);
   }
 
-  .h2,
   h2 {
     font-size: calc(24rem / 16);
     line-height: calc(34rem / 16);
   }
 
-  .h3,
   h3 {
     font-size: calc(21rem / 16);
     line-height: calc(30rem / 16);
-  }
-}
-
-/*
- * =====================
- *   DARK MODE: SYSTEM
- * =====================
- */
-@media (prefers-color-scheme: dark) {
-  html,
-  body,
-  #__next {
-    background-color: var(--color-gray-9);
-    color: var(--color-gray-0);
-  }
-
-  div, span, applet, object, iframe,
-  blockquote, pre, a, abbr, acronym, address, big, cite, code,
-  del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong,
-  sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li,
-  fieldset, form, label, legend, table, caption, tbody, tfoot,
-  thead, tr, th, td, article, aside, canvas, details, embed,
-  figure, figcaption, footer, header, hgroup, menu, nav, output,
-  ruby, section, summary, time, mark, audio, video, *, *::before, *::after {
-    color: var(--color-gray-0);
-  }
-}
-
-@media (prefers-color-scheme: light) {
-  html,
-  body,
-  #__next {
-    background-color: var(--color-gray-0);
-    color: var(--color-gray-9);
-  }
-  
-  div, span, applet, object, iframe,
-  blockquote, pre, a, abbr, acronym, address, big, cite, code,
-  del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong,
-  sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li,
-  fieldset, form, label, legend, table, caption, tbody, tfoot,
-  thead, tr, th, td, article, aside, canvas, details, embed,
-  figure, figcaption, footer, header, hgroup, menu, nav, output,
-  ruby, section, summary, time, mark, audio, video, *, *::before, *::after {
-    color: var(--color-gray-9);
   }
 }
 
@@ -221,7 +167,7 @@ body,
   font-family: 'Thin', 'ExtraLight', 'Light', 'Regular', 'Medium', 'SemiBold', 'Bold', 'ExtraBold', 'Heavy';
 }
 
-#__next>* {
+#__next > * {
   margin: 0 auto;
 }
  
@@ -232,13 +178,15 @@ sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend, table, caption, tbody, tfoot,
 thead, tr, th, td, article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup, menu, nav, output,
-ruby, section, summary, time, mark, audio, video, *, *::before, *::after {
+ruby, section, summary, time, mark, audio, video {
   font-size: 16px;
   font-family: 'Regular';
 }
 
 *, *::before, *::after {
   box-sizing: border-box;
+  font-size: 16px;
+  font-family: 'Regular';
 }
 
 a { 
