--- a/pages/_app.css
+++ b/pages/_app.css
@@ -165,6 +165,13 @@ body,
   margin: 0 auto;
   font-size: 16px;
   font-family: 'Thin', 'ExtraLight', 'Light', 'Regular', 'Medium', 'SemiBold', 'Bold', 'ExtraBold', 'Heavy';
+
+  /* Disabled Draggable */
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  user-select: none;
 }
 
 #__next > * {
