--- a/pages/_app.css
+++ b/pages/_app.css
@@ -3,6 +3,8 @@
  *      FONT FACE
  * ====================
  */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100&family=Source+Serif+4:opsz,wght@8..60,200;8..60,300;8..60,400;8..60,500;8..60,600;8..60,700;8..60,800;8..60,900&display=swap');
+
 @font-face {
   font-family: 'Thin';
   src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Thin.woff') format('woff');
@@ -65,6 +67,7 @@
  */
 :root {
   --color-white: #fff;
+  --color-cyan: #00b4d8;
 
   --color-gray-0: #f8f9fa;
   --color-gray-1: #f1f3f5;
