[ FEAT ] : Add Breakpoints

--- a/pages/_app.css
+++ b/pages/_app.css
@@ -68,6 +68,7 @@
 :root {
   --color-white: #fff;
   --color-cyan: #00b4d8;
+  --color-red: #ff0000;
 
   --color-gray-0: #f8f9fa;
   --color-gray-1: #f1f3f5;
