[ FEAT ] : Playwright(e2e test) add

--- a/pages/_app.css
+++ b/pages/_app.css
@@ -1,158 +1,6 @@
-/*
- * ====================
- *      FONT FACE
- * ====================
- */
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100&family=Source+Serif+4:opsz,wght@8..60,200;8..60,300;8..60,400;8..60,500;8..60,600;8..60,700;8..60,800;8..60,900&display=swap');
-
-@font-face {
-  font-family: 'Thin';
-  src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Thin.woff') format('woff');
-  font-weight: 100;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'ExtraLight';
-  src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-ExtraLight.woff') format('woff');
-  font-weight: 200;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Light';
-  src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Light.woff') format('woff');
-  font-weight: 300;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Regular';
-  src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
-  font-weight: 400;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Medium';
-  src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Medium.woff') format('woff');
-  font-weight: 500;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'SemiBold';
-  src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-SemiBold.woff') format('woff');
-  font-weight: 600;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Bold';
-  src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Bold.woff') format('woff');
-  font-weight: 700;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'ExtraBold';
-  src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-ExtraBold.woff') format('woff');
-  font-weight: 800;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Heavy';
-  src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Black.woff') format('woff');
-  font-weight: 900;
-  font-style: normal;
-}
-
-/*
- * ===================== 
- *     GLOBAL COLORS
- * =====================
- */
-:root {
-  --color-white: #fff;
-  --color-cyan: #00b4d8;
-  --color-red: #ff0000;
-
-  --color-gray-0: #f8f9fa;
-  --color-gray-1: #f1f3f5;
-  --color-gray-2: #e9ecef;
-  --color-gray-3: #dee2e6;
-  --color-gray-4: #ced4da;
-  --color-gray-5: #adb5bd;
-  --color-gray-6: #868e96;
-  --color-gray-7: #495057;
-  --color-gray-8: #343a40;
-  --color-gray-9: #212529;
-
-  --content-width: 1440px;
-}
-
-/*
- * =====================
- *     HEADING STYLE
- * =====================
- */
-h1, h2, h3 {
-  letter-spacing: calc(-0.4rem / 16);
-}
-
-h4, h5, h6, p {
-  letter-spacing: calc(-0.2rem / 16);
-}
-
-.h0 {
-  font-size: calc(50rem / 16);
-  line-height: calc(64rem / 16);
-}
-
-h1 {
-  font-size: calc(38rem / 16);
-  line-height: calc(49rem / 16);
-}
-
-h2 {
-  font-size: calc(28rem / 16);
-  line-height: calc(36rem / 16);
-}
-
-h3 {
-  font-size: calc(22rem / 16);
-  line-height: calc(33rem / 16);
-}
-
-h4 {
-  font-size: calc(22rem / 16);
-  line-height: calc(33rem / 16);
-}
-
-h5 {
-  font-size: calc(16rem /16);
-  line-height: calc(24rem / 16);
-}
-
-h6 {
-  font-size: calc(14rem / 16);
-  line-height: calc(21rem / 16);
-}
-
-p {
-  font-size: calc(12rem / 16);
-  line-height: calc(18rem / 16);
-}
-
-@media screen and (max-width: 768px) {
-  h1 {
-    font-size: calc(32rem / 16);
-    line-height: calc(38rem / 16);
-  }
-
-  h2 {
-    font-size: calc(24rem / 16);
-    line-height: calc(34rem / 16);
-  }
-
-  h3 {
-    font-size: calc(21rem / 16);
-    line-height: calc(30rem / 16);
-  }
-}
+@import '../consts/css/fonts.css';
+@import '../consts/css/variables.css';
+@import '../consts/css/default.css';
 
 /* 
  * =====================
@@ -169,6 +17,8 @@ body,
   margin: 0 auto;
   font-size: 16px;
   font-family: 'Thin', 'ExtraLight', 'Light', 'Regular', 'Medium', 'SemiBold', 'Bold', 'ExtraBold', 'Heavy';
+  background-color: var(--color-gray-0);
+  color: var(--color-gray-9);
 
   /* Disabled Draggable */
   -webkit-user-select: none;
@@ -192,12 +42,14 @@ figure, figcaption, footer, header, hgroup, menu, nav, output,
 ruby, section, summary, time, mark, audio, video {
   font-size: 16px;
   font-family: 'Regular';
+  color: var(--color-gray-9);
 }
 
 *, *::before, *::after {
   box-sizing: border-box;
   font-size: 16px;
   font-family: 'Regular';
+  color: var(--color-gray-9);
 }
 
 a { 
