--- a/consts/css/variables.css
+++ b/consts/css/variables.css
@@ -7,6 +7,15 @@
   --color-white: #fff;
   --color-cyan: #00b4d8;
   --color-red: #ff0000;
+  --color-midnight: #2c3e50;
+  --color-blue: #007bff;
+  --color-green: #28a745;
+  --color-orange: #fd7e14;
+
+  --color-alert-info: var(--color-green);
+  --color-alert-success: var(--color-midnight);
+  --color-alert-warning: var(--color-orange);
+  --color-alert-error: var(--color-red);
 
   --color-gray-0: #f8f9fa;
   --color-gray-1: #f1f3f5;
